Fix: change a font

--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мельникова В.Д.</title>
-    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body style="background-color: rgb(216, 213, 236);">
     <div class="container">
         <div class="row">
             <dev class="col-12">
-                <h1 style="color:rgb(109, 91, 228); text-align: center; font-family: Comfortaa;">
-                    <b>Котята: ваши пушистые друзья</b>
-                </h1>
+                <p style="color:rgb(109, 91, 228); text-align: center;font-family: Rubik Bubbles; font-size: 43px;margin-bottom: 0px;margin-top: 0px;">
+                    Котята:
+                </p>
+                <p style="color:rgb(109, 91, 228); text-align: center;font-family: Comfortaa; font-size: 23px;margin-top: 0px; margin-left: 120px;margin-bottom: 0px;">
+                    ваши пушистые друзья
+                </p>
             </dev>
         </div>
         <div class="row">
             <dev class="col-8">
-                <p style="color:rgb(121, 102, 242);font-family: Comfortaa;">Добро пожаловать в мир котят!</p>
-                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;">Здесь вы найдете все, что нужно знать о милых пушистиках:</p>
-                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;">- советы по уходу;</p> 
-                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;">- интересные факты;</p>
-                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa">- истории о воспитании.</p> 
-                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;">Погрузитесь в их увлекательный мир и узнайте, как сделать их жизнь комфортной и счастливой. Котята — это радость и уют, и мы поможем вам стать идеальным хозяином!</p>
+                <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-bottom: 0px">Добро пожаловать в мир котят!</p>
+                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-top: 0px;">Здесь вы найдете все, что нужно знать о милых пушистиках:</p>
+                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-top: 0px;margin-left: 30px;">- советы по уходу;</p> 
+                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-left: 30px;">- интересные факты;</p>
+                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-left: 30px;">- истории о воспитании.</p> 
+                    <p style="color:rgb(121, 102, 242);font-family: Comfortaa;margin-bottom: 10px;">Погрузитесь в их увлекательный мир и узнайте, как сделать их жизнь комфортной и счастливой. Котята — это радость и уют, и мы поможем вам стать идеальным хозяином!</p>
             </dev>
         </div>
         <div class="row">
@@ -32,13 +34,13 @@
                     <img src="photos/first.jpg" style="height: 300px;margin-right: 10px;">
                     <img src="photos/second.jpg" style="height: 300px;margin-right: 10px;">
                     <img src="photos/third.jpg" style="height: 300px;margin-right: 10px;">
-                    <img src="photos/fourth.jpg" style="height: 300px">
+                    <img src="photos/video.gif" style="height: 300px">
                 </dev>
             </dev>
         </div>
         <div class="raw">
             <dev class="col-2">
-                <p style="color:rgb(121, 102, 242); text-align: center; font-family: Comfortaa;">Сайт выполнила: Мельникова Валерия Дмитриевна</p>
+                <p style="color:rgb(121, 102, 242); text-align: center; font-family: Comfortaa;margin-top: 5px;margin-bottom: 0px;">Сайт выполнила: Мельникова Валерия Дмитриевна</p>
             </dev>
         </div>
     </div>
