Fix: finished version site

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 <p style="color:rgb(121, 102, 242); text-align: center; font-family: Comfortaa;margin-top: 5px;margin-bottom: 0px;">Сайт выполнила: Мельникова Валерия Дмитриевна</p>
             </dev>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="button_js col-12">
+                    <button id="myButton" >Тыкни  на меня и пролистни вниз</button>
+                    <p id="image" style="margin-top: 5px; margin-bottom: 0px;"></p>
+                </div>
+            </div>
+        </div>
     </div>
+    <script type="text/javascript" src="javascript/button.js"></script>
 </body>
 </html>
